# Algebrisk

./: .gitignore  Cargo.toml  README.txt  algebrisk.exe.manifest  algebrisk.rc  build.rs  installer.nsi  run.sh
src/: main.rs
src/ui/: main.htm  math.js  settings.htm
