[package]
name = "algebrisk"
version = "1.0.0"
authors = ["Nick Hilton <nhilton777@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"
[[bin]]
name = "algebrisk"
path = "src/main.rs"

[dependencies]
sciter-rs = "*"
dark-light = "*"
msw-hotkey = "*"
directories = "*"

[dependencies.kalk]
version = "*"
default-features = false

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]